// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExpandingPanel > renders correct HTML structure with all props set 1`] = `
"<div class="expanding-panel extra-class">
  <details class="expanding-panel-details" name="snap-all" open="">
    <summary id="id-snap-all-trigger" class="expanding-panel-summary" aria-controls="id-snap-all-content" aria-expanded="true">
      <div class="label-wrapper"></div>
      <div class="icon-wrapper icon-wrapper--hidden"><span class="iconify i-bi:caret-down-fill icon" aria-hidden="true"></span></div>
    </summary>
    <div id="id-snap-all-content" class="expanding-panel-content" aria-labelledby="id-snap-all-trigger" role="region"></div>
  </details>
</div>"
`;

exports[`ExpandingPanel > renders correct HTML structure with contentIsOnTop true 1`] = `
"<div class="expanding-panel content-is-on-top">
  <details class="expanding-panel-details" name="snap-content-on-top">
    <summary id="id-snap-content-on-top-trigger" class="expanding-panel-summary" aria-controls="id-snap-content-on-top-content" aria-expanded="false">
      <div class="label-wrapper"></div>
      <div class="icon-wrapper"><span class="iconify i-bi:caret-down-fill icon" aria-hidden="true"></span></div>
    </summary>
    <div id="id-snap-content-on-top-content" class="expanding-panel-content" aria-labelledby="id-snap-content-on-top-trigger" role="region"></div>
  </details>
</div>"
`;

exports[`ExpandingPanel > renders correct HTML structure with default props 1`] = `
"<div class="expanding-panel">
  <details class="expanding-panel-details" name="snap-default">
    <summary id="id-snap-default-trigger" class="expanding-panel-summary" aria-controls="id-snap-default-content" aria-expanded="false">
      <div class="label-wrapper"></div>
      <div class="icon-wrapper"><span class="iconify i-bi:caret-down-fill icon" aria-hidden="true"></span></div>
    </summary>
    <div id="id-snap-default-content" class="expanding-panel-content" aria-labelledby="id-snap-default-trigger" role="region"></div>
  </details>
</div>"
`;

exports[`ExpandingPanel > renders correct HTML structure with populated slots 1`] = `
"<div class="expanding-panel">
  <details class="expanding-panel-details" name="snap-slots">
    <summary id="id-snap-slots-trigger" class="expanding-panel-summary" aria-controls="id-snap-slots-content" aria-expanded="false">
      <div class="label-wrapper"><span>Summary text</span></div>
      <div class="icon-wrapper"><span>▸</span></div>
    </summary>
    <div id="id-snap-slots-content" class="expanding-panel-content" aria-labelledby="id-snap-slots-trigger" role="region">
      <p>Content text</p>
    </div>
  </details>
</div>"
`;
